--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,20 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/split2"
+    android:background="@drawable/split3"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/title"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/title" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="270dp">
 
         <ImageView
             android:id="@+id/icon_school"
@@ -32,7 +27,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="150dp"
             android:background="@drawable/edittext"
-            android:hint="school" />
+            android:hint=" 대 학 교" />
 
         <ImageView
             android:id="@+id/icon_user"
@@ -51,7 +46,7 @@
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"
-            android:hint="user" />
+            android:hint=" 학 번" />
 
         <ImageView
             android:id="@+id/icon_password"
@@ -70,27 +65,35 @@
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"
-            android:hint="password" />
+            android:hint="  비밀번호" />
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_password"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="#606060"
-            android:text="로그인" />
+            android:background="@drawable/round"
+            android:backgroundTint="#FF9DCB"
+            android:text="로그인"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:textColor="#FFFFFF"/>
 
         <Button
             android:id="@+id/btn_signup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_login"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="10dp"
-            android:backgroundTint="#606060"
-            android:text="회원가입" />
+            android:background="@drawable/round"
+            android:backgroundTint="#F3D5FF"
+            android:text="회원가입"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:textColor="#959595"/>
 
     </RelativeLayout>
 
