--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="5dp" android:color="#40E0D0"/>
+            <stroke android:width="5dp" android:color="#FF62B8"/>
             <corners
                 android:bottomLeftRadius="50dp"
                 android:bottomRightRadius="50dp"
@@ -17,7 +17,7 @@
         android:right="5dp"
         android:top="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#606060"/>
+            <solid android:color="#FFF0F0"/>
             <corners
                 android:topRightRadius="50dp"
                 android:topLeftRadius="50dp"
