--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -6,13 +6,38 @@
     android:background="@drawable/split2">
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="컴퓨터알고리즘 스터디방"
-        android:textSize="20dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"/>
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/noticeBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/back"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:text="컴퓨터알고리즘 스터디방"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
+            android:gravity="center"/>
+        <Button
+            android:id="@+id/noticeOnOff"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/on_off_button"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"/>
+    </LinearLayout>
+
+
+
+
+
 
 
     <LinearLayout
