--- a/app/src/main/res/layout/room.xml
+++ b/app/src/main/res/layout/room.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="컴퓨터알고리즘 스터디방"
+        android:textColor="#E6C4FF"
         android:fontFamily="@font/bm"
         android:textSize="20dp"
         android:layout_marginTop="10dp"
@@ -25,12 +26,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="룸 정보"
+            android:background="@drawable/border"
             android:fontFamily="@font/bm"
             android:layout_marginLeft="40dp" />
         <Button
             android:id="@+id/ScheduleBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border2"
             android:text="스케줄"
             android:fontFamily="@font/bm"
             android:layout_marginLeft="30dp" />
@@ -39,6 +42,7 @@
             android:id="@+id/noticeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border3"
             android:layout_marginLeft="30dp"
             android:text="게시판"
             android:fontFamily="@font/bm"/>
@@ -78,7 +82,7 @@
                 android:layout_marginLeft="160dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/round3"
-                android:text="입장"
+                android:text="스터디 가입"
                 android:fontFamily="@font/bm"
                 android:textColor="#FFF7F7" />
             <TableLayout
@@ -100,7 +104,7 @@
                         android:text="No."
                         android:fontFamily="@font/bm"
                         android:textSize="20dp"
-                        android:background="#E2C9FF"/>
+                        android:background="#FFC9DA"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -108,7 +112,7 @@
                         android:text="Name"
                         android:fontFamily="@font/bm"
                         android:textSize="20dp"
-                        android:background="#E2C9FF"/>
+                        android:background="#FFC9DA"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -116,7 +120,7 @@
                         android:text="학번"
                         android:fontFamily="@font/bm"
                         android:textSize="20dp"
-                        android:background="#E2C9FF"/>
+                        android:background="#FFC9DA"/>
 
                 </TableRow>
                 <View
