--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/split2">
+    android:orientation="vertical"   >
 
 
     <LinearLayout
@@ -18,12 +17,13 @@
             android:background="@drawable/back"
             android:layout_marginTop="10dp"/>
         <TextView
-            android:layout_width="220dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="컴퓨터알고리즘 스터디방"
+            android:textColor="#E6C4FF"
+            android:fontFamily="@font/bm"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="40dp"
             android:gravity="center"/>
         <Button
             android:id="@+id/noticeOnOff"
