--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/split2">
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -26,6 +27,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,6 +43,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -49,6 +52,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoDepartment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,12 +62,14 @@
     </LinearLayout>
 
     <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -72,6 +78,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,6 +94,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -95,6 +103,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,6 +119,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -118,6 +128,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -133,6 +144,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -141,6 +153,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:fontFamily="@font/bm"
             android:id="@+id/infoPlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -150,12 +163,13 @@
     </LinearLayout>
 
     <Button
+        android:fontFamily="@font/bm"
         android:id="@+id/okBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="160dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/join_button_border"
+        android:background="@drawable/round2"
         android:text="확인" />
 
 </LinearLayout>
