--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:background="@drawable/border3"
         android:orientation="vertical"
         >
         <LinearLayout
@@ -21,31 +21,36 @@
                 android:src="@drawable/user"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"/>
+
             <TextView
                 android:id="@+id/title_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="모바일프로그래밍 스터디"
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="35dp"
-                android:textColor="#FF03DAC5"/>
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/bm"
+                android:text="모바일프로그래밍 스터디"
+                android:textColor="#FFAA03"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/nickname_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="최지원"
-                android:textSize="20dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/white"/>
+                android:fontFamily="@font/bm"
+                android:text="최지원"
+                android:textColor="#F3842F"
+                android:textSize="20dp" />
             <TextView
+                android:fontFamily="@font/bm"
                 android:id="@+id/content_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2022-06-10"
+                android:fontFamily="@font/bm"
                 android:textSize="17dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"/>
