--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/split2">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,20 +27,22 @@
 
 
         <TextView
+            android:fontFamily="@font/nanum"
+            android:textStyle="bold"
             android:layout_width="140dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Smash"
+            android:text="SMASH"
             android:textSize="40dp" />
 
         <Button
             android:id="@+id/logoutBtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="69dp"
+            android:layout_height="78dp"
             android:layout_gravity="bottom"
             android:layout_marginLeft="80dp"
-            android:background="@drawable/on_off_button"/>
+            android:background="@drawable/onoff" />
     </LinearLayout>
 
     <LinearLayout
